--- a/clients/client-01.html
+++ b/clients/client-01.html
@@ -87,8 +87,8 @@
                     <img class="photo" src="assets/client/client-1.png" alt="">
                 </div>
                 <div class="flex-2"> 
-                    <h1>Natália Miranda</h1>
-                    <p>Cliente desde 18/09/2023</p>
+                    <h1>Nome</h1>
+                    <p>Cliente desde</p>
                 </div>
             </div>
         </fieldset>
