--- a/clients/client-03.html
+++ b/clients/client-03.html
@@ -84,11 +84,11 @@
         <fieldset class="person">
             <div class="flex">
                 <div class="flex-1">
-                    <img class="photo" src="assets/client/client-1.png" alt="">
+                    <img class="photo" src="assets/client/client-0.png" alt="">
                 </div>
                 <div class="flex-2"> 
-                    <h1>Natália Miranda</h1>
-                    <p>Cliente desde 18/09/2023</p>
+                    <h1>Nome</h1>
+                    <p>Cliente desde</p>
                 </div>
             </div>
         </fieldset>
